--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 	<center><h1>Suits</h1></center>
 	<p>here are some of my favorite charachters</p>
 	<ol>
-		<li> Harvery Specter (senior partner)</li>
-		<li> <a href="suits.html">Mike Ross (fraud)</a></li>
-		<li> Louis Litt (senior Partner)</li>
+		<li> <a href="harvey.html">Harvery Specter (senior partner)</a></li>
+		<li> <a href="mike.html">Mike Ross (fraud)</a></li>
+		<li>Louis Litt (senior Partner)</li>
 		<li> Jessica Pearson (managing Partner)</li>
 			</ol>
 <br>
 <img src="sutiscover1.jpeg" alt="suitscharachtercoverphoto" />
-		</html>
 
 
+<p>
+	Suits follows about 5 charachters through their many legal cases. they struggle through winning cases, managing their firm, personal lives, and keeping Mike's secret. This show is amazing and entertaining. Once you start writing you CANT stop.
+</p>
 </body>
 </html>
 				
