--- a/harvey.html
+++ b/harvey.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <center><h1>Harvey Specter</h1></center>
-<p>Harvey Specter is an amazing and talented lawyer. For most of the show, we see him as a superhero who has never lsot a case. He hires Mike Ross knowing he was a fraud. But, he is a name partner at Pearson Specter. </p>
+<p>Harvey Specter is an amazing and talented lawyer. For most of the show, we see him as a superhero who has never lost a case. He hires Mike Ross knowing he was a fraud. But, he is a name partner at Pearson Specter. He is my favorite person in Suits. He has a great and funny friendship with Mike and his secratry Donna. </p>
 
 <img src="harveyspecterimage.jpg" alt="Harveyspecterphoto" align="right" width="250" length="350"/>
 
@@ -26,7 +26,9 @@
 		<td>12 year Secratary and Wife at end of show</td>
 	</tr>
 </table>
-
+<iframe width="500" height="200"
+src="https://youtube.com/embed/ImEnWAVRLU0">
+</iframe>
 <a href="index.html">home</a>
 </body>
 </html>
