--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 	<center><h1>Suits</h1></center>
-	<p>here are some of my favorite charachters</p>
+	<p>Here are some of my favorite charachters</p>
 	<ol>
 		<li> <a href="harvey.html">Harvery Specter (senior partner)</a></li>
 		<li> <a href="mike.html">Mike Ross (fraud)</a></li>
-		<li>Louis Litt (senior Partner)</li>
+		<li> <a href="louislitt.html">Louis Litt (senior Partner)</a></li>
 		<li> Jessica Pearson (managing Partner)</li>
 			</ol>
 <br>
@@ -18,7 +18,7 @@
 
 
 <p>
-	Suits follows about 5 charachters through their many legal cases. they struggle through winning cases, managing their firm, personal lives, and keeping Mike's secret. This show is amazing and entertaining. Once you start writing you CANT stop.
+	Suits follows about 5 charachters through their many legal cases. They struggle through winning cases, managing their firm, personal lives, and keeping Mike's secret. This show is amazing and entertaining. Once you start watching you CANT stop.
 </p>
 </body>
 </html>
