--- a/mike.html
+++ b/mike.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <center><h1>Mike Ross</h1></center>
-<p>Mike Ross is a lawyer at Pearson Specter. However, Mike did not graduate college or Harvard Law like he said he did.</p>
+<p>Mike Ross is a lawyer at Pearson Specter. However, Mike did not graduate college or Harvard Law like he said he did. This becomes a big plot in the show; trying to keep hi secret. Unlike the lawyers he works with, he cares a lot about pro bonos. He is caring and wants to help more struggling people and less fortune 500 companies. Mike Ross also eventually gets caught and goes to jail.</p>
 
 <img src="MikeRoss.jpg" alt="mikerosspicture" align="right" width="250" length="350"/>
 
